removed arrows from slider, fixed cards spacing

--- a/src/components/EatOutSection/NewPlacesCard/new-places.module.scss
+++ b/src/components/EatOutSection/NewPlacesCard/new-places.module.scss
@@ -1,7 +1,7 @@
 @import './src/styles/base/base';
 
 .cardContainer {
-    margin: 0 2.4rem;
+    margin: 0 1.2rem;
 }
 
 .cardTopWrapper {
@@ -64,7 +64,7 @@
 
 .bottomText {
     font-size: $font-size-xs;
-    height: 25rem;
+    height: 21rem;
     margin: 0 2.4rem;
     padding-bottom: 2.4rem;
 
